Added the link to activity statistics in the user dropdown-menu and userNavigation menu (supports localization, added icons); added StatsFeaturePlugin and needed components (GlobalSettings, StatsUtils, smart-activity-stream-configuration.xml) for defining isFeatureActiveForUser for smartactivity (statistics) (default  accessPermission = '*:/platform/users'); changed gatein_resources_1_3 to gatein_resources_1_4; refactored code

--- a/services/src/main/resources/locale/smartactivity/SmartActivityStreamAdmin_en.xml
+++ b/services/src/main/resources/locale/smartactivity/SmartActivityStreamAdmin_en.xml
@@ -2,7 +2,7 @@
 <bundle>
   <smartactivity>
     <admin>
-      <title>Activity Statistics Administration Page</title>
+      <title>Activity Statistics</title>
       <setting-title>Settings controls</setting-title>
       <time-scale-setting-title>Time scale</time-scale-setting-title>
       <stream-selector-title>Stream selector</stream-selector-title>
